--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "longfa2",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --inspect ./index.js",
+    "beautiful" : "lint-staged",
+    "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,10 +22,23 @@
     "url": "https://github.com/hades-1997/longfa2/issues"
   },
   "homepage": "https://github.com/hades-1997/longfa2#readme",
+  "lint-staged": {
+    "src/**/*.{js,json,css}": "prettier --single-quote --trailing-comma all --table-width 4 --write"
+  },
+  "husky" : {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
+  },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-handlebars": "^8.0.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3"
   }
 }
