--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "beautiful" : "lint-staged",
+    "beautiful": "lint-staged",
     "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,14 +25,15 @@
   "lint-staged": {
     "src/**/*.{js,json,css}": "prettier --single-quote --trailing-comma all --table-width 4 --write"
   },
-  "husky" : {
+  "husky": {
     "hooks": {
       "pre-commit": "npm test"
     }
   },
   "dependencies": {
     "express": "^5.1.0",
-    "express-handlebars": "^8.0.3"
+    "express-handlebars": "^8.0.3",
+    "mongoose": "^8.14.1"
   },
   "devDependencies": {
     "husky": "^9.1.7",
