--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
-    "mongoose": "^8.14.1"
+    "mongoose": "^8.14.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "husky": "^9.1.7",
