--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "method-override": "^3.0.0",
     "mongoose": "^8.14.1",
-    "slugify": "^1.6.6"
+    "multer": "^1.4.5-lts.2",
+    "slugify": "^1.6.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "husky": "^9.1.7",
