--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "fs": "^0.0.1-security",
     "method-override": "^3.0.0",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
